<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scavenger Hunt</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="registerMessage">New to Scavenger Hunt? Register here</string>
    <string name="login">Login</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="title_activity_register">Register</string>
    <string name="register">Register New Account</string>
    <string name="already_have_account">Already has account! Login here</string>
    <string name="person_name">Full Name</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_acct_info">AcctInfo</string>
    <string name="title_activity_owned_hunt">Owned Hunt</string>
    <string name="title_activity_participant_hunt">Participant Hunt</string>
    <string name="title_activity_create_objective">Create an Objective</string>
    <string name="objectiveName">Name of the Objective</string>
    <string name="description">Description</string>
    <string name="addPhotoGallery">Add photo from the gallery</string>
    <string name="addPhotoCamera">Take photo from the camera</string>
    <string name="create">Create</string>
    <string name="acct">Account Info</string>
    <string name="account">Account</string>
    <string name="title_activity_complete_objective">CompleteObjectiveActivity</string>
    <string name="complete">Complete</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="nameyourhunt">Name Your Hunt</string>
    <string name="createhunt">Create a hunt</string>
    <string name="addparticipant">Add New Participant</string>
    <string name="createobjective">Create New Objective</string>
    <string name="setduration">Set Duration(in min.)</string>
    <string name="starthunt">Start Hunt</string>
    <string name="deletehunt">Delete Hunt</string>
    
    

</resources>