<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >

        <!-- Header  Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5sp"
            android:paddingTop="5sp" >
        </LinearLayout>

        <!-- Header Ends -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10sp" >

            <!-- Objective Name Label -->

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/objectiveName"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/createObjectiveNameBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:layout_marginTop="5sp"
                android:inputType="text"
                android:singleLine="true" />

            <!-- Description Label -->

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="#372c24" />

            <!-- Description text area -->

            <EditText
                android:id="@+id/createObjectiveDescriptionBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" >

                <requestFocus />
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

	        	<Button
	        	    android:id="@+id/btnAddPhotoCamera"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:layout_gravity="center_horizontal"
	        	    android:layout_marginTop="10sp"
	        	    android:layout_weight="1"
	        	    android:text="@string/addPhotoCamera" />
	
	            <Button
	                android:id="@+id/btnAddPhotoGallery"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_horizontal"
	                android:layout_marginTop="10sp"
	                android:layout_weight="1"
	                android:text="@string/addPhotoGallery" />
	                
            </LinearLayout>
            
            
            <ImageView
                android:id="@+id/createObjectiveImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hello_world"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="44dp" >

            <Button
                android:id="@+id/btnSubmitObjective"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create" />
        </RelativeLayout>

    </RelativeLayout>

</ScrollView>